--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
     "connect-redis": "^3.4.0",
+    "cryptiles": "^4.1.2",
     "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "handlebars": "^4.0.12",
+    "hawk": "^7.0.7",
+    "hoek": "^5.0.4",
     "knex": "^0.15.2",
     "nodemon": "^1.18.5",
     "passport": "^0.4.0",
